tests/fixtures/valid/multi/dynamic_unit_import/src/app/fx.gcl
pub base dim Money;
pub base unit USD: Money;
param rate: Dimensionless = 1.08;
pub unit EUR: Money = (@rate) USD;
