tests/fixtures/invalid/const_unit_graph_ref.gcl
base dim Money;
base unit USD: Money;
param rate: Dimensionless = 1.08;
const unit EUR: Money = (@rate) USD;
